--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 
 :root {
     --lightblue: rgb(88, 171, 204);
-    --darkblue: rgb(30, 50, 230);
+    --darkblue: rgb(89, 104, 238);
 }
 
 header {
@@ -17,19 +17,31 @@ header {
 #searchBarDiv {
     padding-top: 4%;
     padding-bottom: 4%;    
+    text-align: center;
 }
 
-#searchBar {
-    width: 10%;
-    margin-left: 43%;
-}
 
 /* For Main Content Div/Grid */
 
+/* Local Storage */
+
 #recentSearchDiv {
     background-color: var(--darkblue);
+    padding: 1%;
+    border: solid black;
+    border-width: 2px 0px 2px 2px ;
 }
+
+/* Forecast and Weather Data */
 
 #weatherDisplayDiv {
     background-color: var(--lightblue);
+    padding: 1%;
+    border: solid black;
+    border-width: 2px 2px 2px 0px;
+}
+
+#currentWeatherDiv {
+    width: 100%;
+    background-color: aqua;
 }
