--- a/assets/style.css
+++ b/assets/style.css
@@ -62,6 +62,10 @@ header {
     text-align: center;
 }
 
+.heroCard img {
+    margin-left: 28%;
+}
+
 /* For recent city section */ 
 
 #recentCityList a {
